--- a/Game/gst.html
+++ b/Game/gst.html
@@ -80,7 +80,7 @@
                     <div id="displayResult"></div>
                 </div>
                 <div class="modal-footer">
-                    <a href="" class="btn btn-dark">Go To PlayZone</a>
+                    <a href="../" class="btn btn-dark">Go To PlayZone</a>
                     <button type="button" class="btn btn-success" onClick="location.reload()">Play Again</button>
                 </div>
             </div>
