Onscreen Button Added

--- a/Game/gst.html
+++ b/Game/gst.html
@@ -51,11 +51,27 @@
                 <p id="display"></p>
                 <div class="mb-3">
                     <input type="number" placeholder="Enter Number" id="guessField" autocomplete="off"> &nbsp;
-                    <button class="btn btn-success" id="submitguess">
+                    <span class="btn btn-success" id="submitguess">
                         Guess
-                    </button>
+                    </span>
                 </div>
             </div>
+
+            <!-- Button Group -->
+            <div class="btn-group" role="group" aria-label="Basic outlined example">
+                <button type="button" class="btn btn-outline-primary">1</button>
+                <button type="button" class="btn btn-outline-primary">2</button>
+                <button type="button" class="btn btn-outline-primary">3</button>
+                <button type="button" class="btn btn-outline-primary">4</button>
+                <button type="button" class="btn btn-outline-primary">5</button>
+                <button type="button" class="btn btn-outline-primary">6</button>
+                <button type="button" class="btn btn-outline-primary">7</button>
+                <button type="button" class="btn btn-outline-primary">8</button>
+                <button type="button" class="btn btn-outline-primary">9</button>
+                <button type="button" class="btn btn-outline-primary">0</button>
+                <button type="button" class="btn btn-outline-primary">🔙</button>
+            </div>
+
             <br><br>
             <p style="font-size: small;font-family: initial;">Developed by Tanmay Chowdhury</p>
         </center>
