Footer Issue Resolved

--- a/Game/gst.html
+++ b/Game/gst.html
@@ -151,16 +151,47 @@
     <br>
 
     <!-- Footer -->
-    <div id="footer"></div>
-
+    <!-- <div id="footer"></div> -->
+    <center>
+        <footer class="container-fluid bg-dark my-0 py-3 text-light" style="position: fixed; bottom: 0;">
+            <a href="https://yourstanmay.github.io/" class="mb-0 text-center" style="color: white;">&copy; YoursTanmay
+                2020-2023</a>
+            <p class="mb-0 text-center">
+                <a href="https://www.facebook.com/tanmay.chowdhury.5688" target="_blank">
+                    <img class="lg" src="https://yourstanmay.github.io/Asset/img/Facebook.jpg" alt="">
+                </a>
+                <a href="https://www.instagram.com/yourstanmay/" target="_blank">
+                    <img class="lg" src="https://yourstanmay.github.io/Asset/img/instagram.jpg" alt="">
+                </a>
+                <a href="https://twitter.com/yourstanmay" target="_blank">
+                    <img class="lg" src="https://yourstanmay.github.io/Asset/img/twitter.jpg" alt="">
+                </a>
+                <a href="https://www.linkedin.com/in/tanmay-chowdhury-51530abb/" target="_blank">
+                    <img class="lg" src="https://yourstanmay.github.io/Asset/img/linkedin.png" alt="">
+                </a>
+                <a href="https://www.hackerrank.com/yourstanmay?hr_r=1" target="_blank">
+                    <img class="lg" src="https://yourstanmay.github.io/Asset/img/HackerRank.png" alt="">
+                </a>
+                <a href="https://www.codechef.com/users/yourstanmay" target="_blank">
+                    <img class="lg" src="https://yourstanmay.github.io/Asset/img/codechef.png" alt="">
+                </a>
+                <a href="https://www.youtube.com/channel/UCIo-AMfrjUrbqVUAj7Jp71w" target="_blank">
+                    <img class="lg" src="https://yourstanmay.github.io/Asset/img/yt.png" alt="">
+                </a>
+                <a style="color: #212529;" href="https://github.com/yourstanmay" target="_blank">
+                    <img class="lg" src="https://yourstanmay.github.io/Asset/img/github.png" alt="">
+                </a>
+            </p>
+        </footer>
+    </center>
 
 
     <!-- Optional JavaScript -->
     <!--Common Template-->
     <script src="https://cdn.bootcss.com/jquery/2.1.1/jquery.min.js"></script>
     <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="../Asset/js/Template/nav.js" id="nav-bar" defer></script>
-    <script src="../Asset/js/Template/footer.js" id="nav-bar" defer></script>
+    <!-- <script src="../Asset/js/Template/nav.js" id="nav-bar" defer></script>
+    <script src="../Asset/js/Template/footer.js" id="nav-bar" defer></script> -->
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
