--- a/Game/gst.html
+++ b/Game/gst.html
@@ -18,50 +18,88 @@
 
     <title>YoursTanmay</title>
     <link rel="shortcut icon" type="image/png" href="../Asset/img/logo.jpg">
+
+    <!-- Loader Styles -->
+    <style>
+        .loader {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(255, 255, 255, 0.8);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            z-index: 9999;
+        }
+
+        .loader::after {
+            content: "";
+            border: 8px solid #f3f3f3;
+            border-top: 8px solid #3498db;
+            border-radius: 50%;
+            width: 60px;
+            height: 60px;
+            animation: spin 1s linear infinite;
+        }
+
+        @keyframes spin {
+            0% {
+                transform: rotate(0deg);
+            }
+
+            100% {
+                transform: rotate(360deg);
+            }
+        }
+
+        .btn-group-container {
+            display: flex;
+            justify-content: center;
+            /* Center the button group horizontally */
+            align-items: center;
+            /* Center the button group vertically if needed */
+            margin-top: 20px;
+            /* Adjust as needed */
+            flex-wrap: wrap;
+            /* Allow the buttons to wrap to the next line */
+        }
+
+        .btn-group .btn {
+            flex: 1 1 40px;
+            /* Equal width for all buttons; adjust width as needed */
+            max-width: 40px;
+            /* Ensure buttons do not grow larger than specified */
+            min-width: 40px;
+            /* Ensure buttons do not shrink smaller than specified */
+            height: 40px;
+            /* Set a fixed height for all buttons */
+            padding: 5px;
+            /* Adjust padding for a more compact look */
+            font-size: 14px;
+            /* Adjust font size for a smaller button look */
+            text-align: center;
+            /* Center text inside buttons */
+            box-sizing: border-box;
+            /* Include padding and border in element's width and height */
+        }
+
+        .btn-clear {
+            flex: 1 1 80px;
+            /* Larger width for the clear button */
+            max-width: 80px;
+            min-width: 80px;
+            height: 40px;
+            /* Match height with other buttons */
+        }
+    </style>
 </head>
-<style>
-    .btn-group-container {
-        display: flex;
-        justify-content: center;
-        /* Center the button group horizontally */
-        align-items: center;
-        /* Center the button group vertically if needed */
-        margin-top: 20px;
-        /* Adjust as needed */
-        flex-wrap: wrap;
-        /* Allow the buttons to wrap to the next line */
-    }
-
-    .btn-group .btn {
-        flex: 1 1 40px;
-        /* Equal width for all buttons; adjust width as needed */
-        max-width: 40px;
-        /* Ensure buttons do not grow larger than specified */
-        min-width: 40px;
-        /* Ensure buttons do not shrink smaller than specified */
-        height: 40px;
-        /* Set a fixed height for all buttons */
-        padding: 5px;
-        /* Adjust padding for a more compact look */
-        font-size: 14px;
-        /* Adjust font size for a smaller button look */
-        text-align: center;
-        /* Center text inside buttons */
-        box-sizing: border-box;
-        /* Include padding and border in element's width and height */
-    }
-
-    .btn-clear {
-        flex: 1 1 80px;
-        /* Larger width for the clear button */
-        max-width: 80px;
-        min-width: 80px;
-        height: 40px;
-        /* Match height with other buttons */
-    }
-</style>
 
 <body>
+
+    <!-- Loader -->
+    <div id="loader" class="loader"></div>
 
     <!-- Navbar -->
     <nav class="bg-dark">
@@ -80,7 +118,7 @@
         <center>
             <div class="border border-light rounded">
                 <img src="../Asset/img/gtnlogo.png" style="height: 48px;" class="gtns">
-                </h1><span class="btn bg-warning gtns">GUESS THE NUMBER</span></h1>
+                <span class="btn bg-warning gtns">GUESS THE NUMBER</span>
             </div>
 
             <div style="font-family: serif;">
@@ -151,47 +189,14 @@
     <br>
 
     <!-- Footer -->
-    <!-- <div id="footer"></div> -->
-    <center>
-        <footer class="container-fluid bg-dark my-0 py-3 text-light" style="position: fixed; bottom: 0;">
-            <a href="https://yourstanmay.github.io/" class="mb-0 text-center" style="color: white;">&copy; YoursTanmay
-                2020-2023</a>
-            <p class="mb-0 text-center">
-                <a href="https://www.facebook.com/tanmay.chowdhury.5688" target="_blank">
-                    <img class="lg" src="https://yourstanmay.github.io/Asset/img/Facebook.jpg" alt="">
-                </a>
-                <a href="https://www.instagram.com/yourstanmay/" target="_blank">
-                    <img class="lg" src="https://yourstanmay.github.io/Asset/img/instagram.jpg" alt="">
-                </a>
-                <a href="https://twitter.com/yourstanmay" target="_blank">
-                    <img class="lg" src="https://yourstanmay.github.io/Asset/img/twitter.jpg" alt="">
-                </a>
-                <a href="https://www.linkedin.com/in/tanmay-chowdhury-51530abb/" target="_blank">
-                    <img class="lg" src="https://yourstanmay.github.io/Asset/img/linkedin.png" alt="">
-                </a>
-                <a href="https://www.hackerrank.com/yourstanmay?hr_r=1" target="_blank">
-                    <img class="lg" src="https://yourstanmay.github.io/Asset/img/HackerRank.png" alt="">
-                </a>
-                <a href="https://www.codechef.com/users/yourstanmay" target="_blank">
-                    <img class="lg" src="https://yourstanmay.github.io/Asset/img/codechef.png" alt="">
-                </a>
-                <a href="https://www.youtube.com/channel/UCIo-AMfrjUrbqVUAj7Jp71w" target="_blank">
-                    <img class="lg" src="https://yourstanmay.github.io/Asset/img/yt.png" alt="">
-                </a>
-                <a style="color: #212529;" href="https://github.com/yourstanmay" target="_blank">
-                    <img class="lg" src="https://yourstanmay.github.io/Asset/img/github.png" alt="">
-                </a>
-            </p>
-        </footer>
-    </center>
-
+    <div id="footer"></div>
 
     <!-- Optional JavaScript -->
     <!--Common Template-->
     <script src="https://cdn.bootcss.com/jquery/2.1.1/jquery.min.js"></script>
     <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <!-- <script src="../Asset/js/Template/nav.js" id="nav-bar" defer></script>
-    <script src="../Asset/js/Template/footer.js" id="nav-bar" defer></script> -->
+    <script src="../Asset/js/Template/nav.js" id="nav-bar" defer></script>
+    <script src="../Asset/js/Template/footer.js" id="nav-bar" defer></script>
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
@@ -218,6 +223,14 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
         crossorigin="anonymous"></script>
+
+    <!-- Loader Script -->
+    <script>
+        // Hide the loader once the page is fully loaded
+        window.addEventListener('load', function () {
+            document.getElementById('loader').style.display = 'none';
+        });
+    </script>
 
 </body>
 
