--- a/Game/gst.html
+++ b/Game/gst.html
@@ -7,17 +7,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="../Asset/css/top.css">
-    <link rel="stylesheet" type="text/css" href="../Asset/css/bkg.css">
-    <link rel="stylesheet" type="text/css" href="../Asset/css/contact.css">
-    <link rel="stylesheet" type="text/css" href="../Asset/css/hoverNav.css">
+
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
+    <link rel="stylesheet" type="text/css" href="https://yourstanmay.github.io/Asset/css/top.css">
+    <link rel="stylesheet" type="text/css" href="https://yourstanmay.github.io/Asset/css/bkg.css">
+    <link rel="stylesheet" type="text/css" href="https://yourstanmay.github.io/Asset/css/contact.css">
+    <link rel="stylesheet" type="text/css" href="https://yourstanmay.github.io/Asset/css/hoverNav.css">
+    <link rel="stylesheet" type="text/css" href="https://yourstanmay.github.io/Asset/css/neon.css">
     <link rel="stylesheet" type="text/css" href="../Asset/css/firework.css">
     <link rel="stylesheet" type="text/css" href="../Asset/css/gst.css">
 
-    <title>YoursTanmay</title>
-    <link rel="shortcut icon" type="image/png" href="../Asset/img/logo.jpg">
+    <title>PlayZone - YoursTanmay</title>
+    <link rel="shortcut icon" type="image/png" href="https://yourstanmay.github.io/Asset/img/logo.jpg">
 
     <!-- Loader Styles -->
     <style>
@@ -94,9 +99,13 @@
             /* Match height with other buttons */
         }
     </style>
+
 </head>
 
 <body>
+
+    <!-- Particles.js background -->
+    <div id="particles-js"></div>
 
     <!-- Loader -->
     <div id="loader" class="loader"></div>
@@ -114,7 +123,8 @@
     <!-- Content -->
     <!-- playzone -->
     <br>
-    <div class="container">
+    <div class="container"
+        style="background:url(https://yourstanmay.github.io/Asset/img/bg-card.gif);">
         <center>
             <div class="border border-light rounded">
                 <img src="../Asset/img/gtnlogo.png" style="height: 48px;" class="gtns">
@@ -160,14 +170,14 @@
     </div>
 
     <!-- Button trigger modal -->
-    <button type="button" class="btn btn-primary d-none firework" data-bs-toggle="modal" data-bs-target="#resultModal"
+    <button type="button" class="btn btn-primary d-none firework" data-toggle="modal" data-target="#resultModal"
         id="resultButton">
         Result
     </button>
 
     <!-- Modal -->
     <div class="modal fade" id="resultModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true"
-        data-bs-backdrop="static" data-bs-keyboard="false">
+        data-backdrop="static" data-keyboard="false">
 
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
@@ -191,17 +201,10 @@
     <!-- Footer -->
     <div id="footer"></div>
 
-    <!-- Optional JavaScript -->
-    <!--Common Template-->
-    <script src="https://cdn.bootcss.com/jquery/2.1.1/jquery.min.js"></script>
-    <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="../Asset/js/Template/nav.js" id="nav-bar" defer></script>
-    <script src="../Asset/js/Template/footer.js" id="nav-bar" defer></script>
-
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-        crossorigin="anonymous"></script>
+    <!-- JavaScript -->
+    <!-- jQuery first, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
         crossorigin="anonymous"></script>
@@ -209,20 +212,19 @@
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
 
-    <script type="text/javascript" src="../Asset/js/top.js"></script>
-    <script type="text/javascript" src="../Asset/js/particles.js"></script>
-    <script type="text/javascript" src="../Asset/js/app.js"></script>
-    <script type="text/javascript" src="../Asset/js/gtn.js"></script>
-    <script type="text/javascript" src="../Asset/js/firework.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
+    <!--Common Template-->
+    <script src="https://yourstanmay.github.io/Asset/js/Template/nav.js" id="nav-bar" defer></script>
+    <script src="https://yourstanmay.github.io/Asset/js/Template/footer.js" id="footer-bar" defer></script>
+
+    <script type="text/javascript" src="https://yourstanmay.github.io/Asset/js/top.js"></script>
+    <script type="text/javascript" src="https://yourstanmay.github.io/Asset/js/particles.js"></script>
+    <script type="text/javascript" src="https://yourstanmay.github.io/Asset/js/app.js"></script>
     <script
         src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js?lang=css&amp;skin=sunburst"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-        crossorigin="anonymous"></script>
+
+    <!-- Custom JS -->
+    <script type="text/javascript" src="../Asset/js/gtn.js"></script>
+    <script type="text/javascript" src="../Asset/js/firework.js"></script>
 
     <!-- Loader Script -->
     <script>
