--- a/index.html
+++ b/index.html
@@ -7,18 +7,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="Asset/css/top.css">
-    <link rel="stylesheet" type="text/css" href="Asset/css/bkg.css">
-    <link rel="stylesheet" type="text/css" href="Asset/css/contact.css">
-    <link rel="stylesheet" type="text/css" href="Asset/css/hoverNav.css">
 
-    <title>YoursTanmay</title>
-    <link rel="shortcut icon" type="image/png" href="Asset/img/logo.jpg">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
+    <link rel="stylesheet" type="text/css" href="https://yourstanmay.github.io/Asset/css/top.css">
+    <link rel="stylesheet" type="text/css" href="https://yourstanmay.github.io/Asset/css/bkg.css">
+    <link rel="stylesheet" type="text/css" href="https://yourstanmay.github.io/Asset/css/contact.css">
+    <link rel="stylesheet" type="text/css" href="https://yourstanmay.github.io/Asset/css/hoverNav.css">
+    <link rel="stylesheet" type="text/css" href="https://yourstanmay.github.io/Asset/css/neon.css">
+
+    <title>PlayZone - YoursTanmay</title>
+    <link rel="shortcut icon" type="image/png" href="https://yourstanmay.github.io/Asset/img/logo.jpg">
 </head>
 
 <body>
+    <!-- Particles.js background -->
+    <div id="particles-js"></div>
 
     <!-- Navbar -->
     <nav class="bg-dark">
@@ -37,8 +44,8 @@
         <div class=" row row-cols-1 row-cols-md-3 d-flex justify-content-center ">
             <a href="Game/gst.html">
                 <div class="col mb-4">
-                    <div class="card align-items-center" style="background:url(/Asset/img/bg-card.gif);">
-                        <img src="Asset/img/gtn.png" class="card-img-top" style="width:124px" alt="...">
+                    <div class="card align-items-center neon-content" style="background:url(https://yourstanmay.github.io/Asset/img/bg-card.gif);">
+                        <img src="Asset/img/gtn.png" class="card-img-top" style="width:121px" alt="...">
                         <div class="card-body">
                             <h5 class="card-title text-center">Guess The Number</h5>
                         </div>
@@ -49,29 +56,19 @@
     </div>
     <br><br><br><br><br><br>
 
-
     <!-- Goto Top -->
     <button onclick="topFunction()" id="myBtn" title="Go to top">
-        <h3> ↑ </h3>
+        <i class="fas fa-arrow-up"></i>
     </button>
     </div>
 
     <!-- Footer -->
     <div id="footer"></div>
 
-
-
-    <!-- Optional JavaScript -->
-    <!--Common Template-->
-    <script src="https://cdn.bootcss.com/jquery/2.1.1/jquery.min.js"></script>
-    <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="Asset/js/Template/nav.js" id="nav-bar" defer></script>
-    <script src="Asset/js/Template/footer.js" id="nav-bar" defer></script>
-
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-        crossorigin="anonymous"></script>
+    <!-- JavaScript -->
+    <!-- jQuery first, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
         crossorigin="anonymous"></script>
@@ -79,10 +76,13 @@
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
 
-    <script type="text/javascript" src="Asset/js/top.js"></script>
-    <script type="text/javascript" src="Asset/js/particles.js"></script>
-    <script type="text/javascript" src="Asset/js/app.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
+    <!--Common Template-->
+    <script src="https://yourstanmay.github.io/Asset/js/Template/nav.js" id="nav-bar" defer></script>
+    <script src="https://yourstanmay.github.io/Asset/js/Template/footer.js" id="footer-bar" defer></script>
+
+    <script type="text/javascript" src="https://yourstanmay.github.io/Asset/js/top.js"></script>
+    <script type="text/javascript" src="https://yourstanmay.github.io/Asset/js/particles.js"></script>
+    <script type="text/javascript" src="https://yourstanmay.github.io/Asset/js/app.js"></script>
     <script
         src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js?lang=css&amp;skin=sunburst"></script>
 
