--- a/404.html
+++ b/404.html
@@ -13,11 +13,11 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
-    <link rel="stylesheet" type="text/css" href="https://yourstanmay.github.io//Asset/css/top.css">
-    <link rel="stylesheet" type="text/css" href="https://yourstanmay.github.io//Asset/css/bkg.css">
-    <link rel="stylesheet" type="text/css" href="https://yourstanmay.github.io//Asset/css/contact.css">
-    <link rel="stylesheet" type="text/css" href="https://yourstanmay.github.io//Asset/css/hoverNav.css">
-    <link rel="stylesheet" type="text/css" href="https://yourstanmay.github.io//Asset/css/neon.css">
+    <link rel="stylesheet" type="text/css" href="https://yourstanmay.github.io/Asset/css/top.css">
+    <link rel="stylesheet" type="text/css" href="https://yourstanmay.github.io/Asset/css/bkg.css">
+    <link rel="stylesheet" type="text/css" href="https://yourstanmay.github.io/Asset/css/contact.css">
+    <link rel="stylesheet" type="text/css" href="https://yourstanmay.github.io/Asset/css/hoverNav.css">
+    <link rel="stylesheet" type="text/css" href="https://yourstanmay.github.io/Asset/css/neon.css">
 
     <title>404 Page Not Found - YoursTanmay PlayZone</title>
     <link rel="shortcut icon" type="image/png" href="https://yourstanmay.github.io/Asset/img/logo.jpg">
@@ -85,12 +85,12 @@
     </script>
 
     <!--Common Template-->
-    <script src="https://yourstanmay.github.io//Asset/js/Template/nav.js" id="nav-bar" defer></script>
-    <script src="https://yourstanmay.github.io//Asset/js/Template/footer.js" id="footer-bar" defer></script>
+    <script src="https://yourstanmay.github.io/Asset/js/Template/nav.js" id="nav-bar" defer></script>
+    <script src="https://yourstanmay.github.io/Asset/js/Template/footer.js" id="footer-bar" defer></script>
 
-    <script type="text/javascript" src="https://yourstanmay.github.io//Asset/js/top.js"></script>
-    <script type="text/javascript" src="https://yourstanmay.github.io//Asset/js/particles.js"></script>
-    <script type="text/javascript" src="https://yourstanmay.github.io//Asset/js/app.js"></script>
+    <script type="text/javascript" src="https://yourstanmay.github.io/Asset/js/top.js"></script>
+    <script type="text/javascript" src="https://yourstanmay.github.io/Asset/js/particles.js"></script>
+    <script type="text/javascript" src="https://yourstanmay.github.io/Asset/js/app.js"></script>
     <script
         src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js?lang=css&amp;skin=sunburst"></script>
 
